[package]
name = "websocket-service"
version = "1.5.7"
authors = ["Аleksej Petrov <apetrov@wavesplatform.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bb8 = "0.8"
bb8-redis = "0.11"
envy = "0.4"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
prometheus = "0.13"
redis = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_debug"] }
thiserror = "1.0"
tokio = { version = "1.7", features = ["macros", "rt", "rt-multi-thread", "sync", "signal"] }
url = "2.2.0"
warp = "0.3"
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.0" }
wavesexchange_topic = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_topic/0.2.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.12.2" }

[[bin]]
name = "service"
path = "src/main.rs"
